# dtd

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README  install_sfml_dependencies.sh
assets/: CMakeLists.txt  asset_path.hpp.in  level_1.tmx
assets/levels/: level_1.json  level_1.tmx
assets/sprites/: README
lib/: CMakeLists.txt
lib/loguru/: CMakeLists.txt
src/: CMakeLists.txt
src/assets/: CMakeLists.txt
src/assets/include/assets/: asset.hpp  asset_id.hpp  asset_type.hpp  assets_interface.hpp  level_interface.hpp  levels.hpp  render_level_interface.hpp
src/assets/include/assets/level/: layer.hpp  tileset.hpp
src/assets/src/: asset_loader.cpp  asset_loader.hpp  assets.cpp  assets.hpp  level.cpp  level.hpp  level_parser.cpp  level_parser.hpp
src/assets/src/level/: tileset.cpp
src/event_handler/: CMakeLists.txt
src/event_handler/include/event_handler/: event_handler_interface.hpp  event_listener.hpp
src/event_handler/src/: event_handler.cpp  event_handler.hpp
src/game/: CMakeLists.txt
src/game/include/game/: game_interface.hpp
src/game/src/: constants.hpp  game.cpp  game.hpp  level.cpp  level.hpp  level_parser.hpp  system_manager.cpp  system_manager.hpp
src/game/src/camera/: camera.cpp  camera.hpp
src/game/src/components/: circle_radius_component.hpp  damage_component.hpp  direction_component.hpp  enemy_component.hpp  enemy_shooter.hpp  enemy_shooter_component.hpp  health_component.hpp  mouse_click_component.hpp  position_component.hpp  projectile_component.hpp  projectile_hit_component.hpp  sound_component.hpp  speed_component.hpp  sprite_animation_component.hpp  sprite_component.hpp  tower_component.hpp  transform_component.hpp  velocity_component.hpp  waypoint_follower_component.hpp
src/game/src/components/commands/: tower_select_command.hpp
src/game/src/entities/: command_factory.cpp  command_factory.hpp  enemy_type.cpp  enemy_type.hpp  entity_factory.cpp  entity_factory.hpp  projectile_type.hpp
src/game/src/scenes/: battle_scene.cpp  battle_scene.hpp  menu_scene.cpp  menu_scene.hpp  scene.cpp  scene.hpp  scene_id.hpp  scene_input_handler.cpp  scene_input_handler.hpp  scene_manager.cpp  scene_manager.hpp
src/game/src/systems/: damage_system.cpp  damage_system.hpp  debug_render_system.cpp  debug_render_system.hpp  enemy_dispose_system.cpp  enemy_dispose_system.hpp  enemy_spawn_system.cpp  enemy_spawn_system.hpp  mouse_click_system.cpp  mouse_click_system.hpp  movement_system.cpp  movement_system.hpp  projectile_system.cpp  projectile_system.hpp  render_system.cpp  render_system.hpp  shooting_system.cpp  shooting_system.hpp  sound_system.cpp  sound_system.hpp  system_manager.cpp  system_manager.hpp  targeting_system.cpp  targeting_system.hpp  waypoint_follow_system.cpp  waypoint_follow_system.hpp
src/game_loop/: CMakeLists.txt
src/game_loop/include/game/: game_interface.hpp
src/game_loop/include/game_loop/: game_loop_interface.hpp
src/game_loop/src/: game_loop.cpp  game_loop.hpp
src/input_handler/: CMakeLists.txt
src/input_handler/include/input_handler/: input_handler_interface.hpp  mouse_listener.hpp
src/input_handler/src/: input_handler.cpp  input_handler.hpp
src/math/: CMakeLists.txt
src/math/include/math/: algorithm.hpp  default_values.hpp  rect.hpp  vector.hpp
src/renderer/: CMakeLists.txt
src/renderer/include/renderer/: debug_renderer_interface.hpp  hud_renderer_interface.hpp  level_renderer_interface.hpp  renderer_interface.hpp  screen_coord.hpp  shape_renderer_interface.hpp  sprite_id.hpp  sprite_renderer_interface.hpp
src/renderer/src/: debug_renderer.cpp  debug_renderer.hpp  hud_renderer.cpp  hud_renderer.hpp  level_renderer.cpp  level_renderer.hpp  renderer.cpp  renderer.hpp  shape_renderer.cpp  shape_renderer.hpp  sprite.cpp  sprite.hpp  sprite_cache.cpp  sprite_cache.hpp  sprite_id.cpp  sprite_renderer.cpp  sprite_renderer.hpp  subrenderer.cpp  subrenderer.hpp  window_size.hpp
src/sound_player/: CMakeLists.txt
src/sound_player/include/sound_player/: sound_id.hpp  sound_player_Interface.hpp
src/sound_player/src/: sound_cache.cpp  sound_cache.hpp  sound_id.cpp  sound_player.cpp  sound_player.hpp
src/types/: CMakeLists.txt
src/types/include/types/: asset_id.hpp  entity_id.hpp  projectile_type.hpp
